--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>METRICA Advertising</title>
+	<title>METRIKA Advertising</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -68,13 +68,13 @@
 							<div class="row">
 								<div class="col-md-12">
 									<div class="border">
-										<p>METRICA Advertising Agency</p>
+										<p>METRIKA Advertising Agency</p>
 									</div>
 									<div class="col-md-8 col-md-offset-2">
 										<a href="#brands" class="btn btn-circle page-scroll">
 											<img src="img/down-arrow.svg" alt="arrow">
 										</a>
-										<p class="intro-text">7 лет работы на российском рынке</p>
+										<p class="intro-text">12 лет работы на российском рынке</p>
 									</div>
 								</div>
 							</div>
@@ -227,7 +227,7 @@
 
 		<div class="mail-text">
 			<p id="contacts" class="qe">Спросите, что вас интересует:</p>
-			<p>info@media-metrica.ru</p>
+			<p>info@media-metrika.ru</p>
 		</div>
 
 	</div>
@@ -262,8 +262,8 @@ function initMap() {
 	<div class="address">
 		<div class="address-text">
 			<p>office@media-metrica.ru</p>
-			<p>123100, Москва, Пресненская набережная, дом 12, ММДЦ «Москва Сити»,<br> башня «Федерация Запад», этаж 45, офис 82</p>
-			<p class="copyright">© 2009-2017 METRICA Advertising</p>
+			<p>123100, Москва, Пресненская набережная, дом 12, ММДЦ «Москва Сити»,<br> башня «Федерация Запад», этаж 45, офис 10</p>
+			<p class="copyright">© 2009-2022 METRIKA</p>
 		</div>
 		<div class="developer">Сделано в Студии Юрия Смольянинова</div>
 	</div>
