--- a/index_english.html
+++ b/index_english.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>METRICA Advertising</title>
+	<title>METRIKA Advertising</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -68,13 +68,13 @@
 							<div class="row">
 								<div class="col-md-12">
 									<div class="border">
-										<p>METRICA Advertising Agency</p>
+										<p>METRIKA Advertising Agency</p>
 									</div>
 									<div class="col-md-8 col-md-offset-2">
 										<a href="#brands" class="btn btn-circle page-scroll">
 											<img src="img/down-arrow.svg" alt="arrow">
 										</a>
-										<p class="intro-text">7+ years on the Russian market</p>
+										<p class="intro-text">12+ years on the Russian market</p>
 									</div>
 								</div>
 							</div>
@@ -209,7 +209,7 @@
 		<div class="col-md-8 col-md-offset-2">
 			<div class="promo">
 				<p>We are an agency with strong analytical skills and expertise in advertising.</p>
-				<p>Metrica has been working with leading organizations in Russia since 2009, serving a wide range of clients, from developers to banks and car dealers.</p>
+				<p>Metrika has been working with leading organizations in Russia since 2009, serving a wide range of clients, from developers to banks and car dealers.</p>
 				<p>We are working closely with advertising platforms in Moscow and all regions of Russia, providing the best conditions for advertising.</p>
 				<p>We are in love with numbers and metrics, therefore all of our marketing projects are based  on data analysis.</p>
 			</div>
@@ -228,7 +228,7 @@
 
 		<div class="mail-text">
 			<p id="contacts" class="qe">Feel free to email us to ask any questions:</p>
-			<p>info@media-metrica.ru</p>
+			<p>info@media-metrika.ru</p>
 		</div>
 
 	</div>
@@ -263,8 +263,8 @@ function initMap() {
 	<div class="address">
 		<div class="address-text">
 			<p>office@media-metrica.ru</p>
-			<p>12 Presnenskaya Naberezhnaya, Moscow IBC, Office Complex "Federation", Tower "West",<br> 45 floor, office 82, Moscow, Russian Federation, 123100</p>
-			<p class="copyright">© 2009-2017 METRICA Advertising</p>
+			<p>12 Presnenskaya Naberezhnaya, Moscow IBC, Office Complex "Federation", Tower "West",<br> 45 floor, office 10, Moscow, Russian Federation, 123100</p>
+			<p class="copyright">© 2009-2022 METRIKA Advertising</p>
 		</div>
 		<div class="developer">Made in Yury Smolianinov Studio</div>
 	</div>
