--- a/career.html
+++ b/career.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>METRICA Advertising</title>
+	<title>METRIKA Advertising</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -82,7 +82,7 @@
 					<ul class="careers-list">
 
 						<li>
-							<h4 class="marketing">ОТДЕЛ ПРОДАЖ</h4>
+							<h4 class="marketing">КЛИЕНТСКИЙ ОТДЕЛ</h4>
 							<ul>
 								<li><a data-id="263140" href="/careers/?gh_jid=263140">Менеджер по продажам <i class="fa fa-angle-right" aria-hidden="true"></i></a></li>
 							</ul>
@@ -96,7 +96,7 @@
 						</li>
 
 						<li>
-							<h4 class="strategy">ОТДЕЛ СТРАТЕГИЙ</h4>
+							<h4 class="strategy">ОТДЕЛ РАЗРАБОТКИ</h4>
 							<ul>
 								<li><a data-id="574614" href="/careers/?gh_jid=574614">Стратег <i class="fa fa-angle-right" aria-hidden="true"></i></a></li>
 							</ul>
@@ -133,8 +133,8 @@
 	<div class="address">
 		<div class="address-text">
 			<p>office@media-metrica.ru</p>
-			<p>123100, Москва, Пресненская набережная, дом 12, ММДЦ «Москва Сити»,<br> башня «Федерация Запад», этаж 45, офис 82</p>
-			<p class="copyright">© 2009-2017 METRICA Advertising</p>
+			<p>123100, Москва, Пресненская набережная, дом 12, ММДЦ «Москва Сити»,<br> башня «Федерация Запад», этаж 45, офис 10</p>
+			<p class="copyright">© 2009-2022 METRIKA Advertising</p>
 		</div>
 		<div class="developer">Сделано в Студии Юрия Смольянинова</div>
 	</div>
