--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>METRICA Advertising</title>
+	<title>METRIKA Advertising</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
