--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<div class="row">
 				<div id="main" class="mnu-line clearfix">
 					<div class="col-md-2">
-						<a href="#" class="logo">Metrica</a>
+						<a href="#" class="logo">Metrika</a>
 					</div>
 					<div class="col-md-6 col-md-offset-4">
 						<nav class="main-mnu">
@@ -261,7 +261,7 @@ function initMap() {
 <footer class="main-footer">
 	<div class="address">
 		<div class="address-text">
-			<p>office@media-metrica.ru</p>
+			<p>office@media-metrika.ru</p>
 			<p>123100, Москва, Пресненская набережная, дом 12, ММДЦ «Москва Сити»,<br> башня «Федерация Запад», этаж 45, офис 10</p>
 			<p class="copyright">© 2009-2022 METRIKA</p>
 		</div>
