--- a/index_english.html
+++ b/index_english.html
@@ -48,7 +48,7 @@
 			<div class="row">
 				<div id="main" class="mnu-line clearfix">
 					<div class="col-md-2">
-						<a href="#" class="logo">Metrica</a>
+						<a href="#" class="logo">Metrika</a>
 					</div>
 					<div class="col-md-6 col-md-offset-4">
 						<nav class="main-mnu">
@@ -262,7 +262,7 @@ function initMap() {
 <footer class="main-footer">
 	<div class="address">
 		<div class="address-text">
-			<p>office@media-metrica.ru</p>
+			<p>office@media-metrika.ru</p>
 			<p>12 Presnenskaya Naberezhnaya, Moscow IBC, Office Complex "Federation", Tower "West",<br> 45 floor, office 10, Moscow, Russian Federation, 123100</p>
 			<p class="copyright">© 2009-2022 METRIKA Advertising</p>
 		</div>
