--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ function initMap() {
 		<div class="address-text">
 			<p>office@media-metrika.ru</p>
 			<p>123100, Москва, Пресненская набережная, дом 12, ММДЦ «Москва Сити»,<br> башня «Федерация Запад», этаж 45, офис 10</p>
-			<p class="copyright">© 2009-2022 METRIKA</p>
+			<p class="copyright">© METRIKA 2009-2022 </p>
 		</div>
 		<div class="developer">Сделано в Студии Юрия Смольянинова</div>
 	</div>
