--- a/index_english.html
+++ b/index_english.html
@@ -264,7 +264,7 @@ function initMap() {
 		<div class="address-text">
 			<p>office@media-metrika.ru</p>
 			<p>12 Presnenskaya Naberezhnaya, Moscow IBC, Office Complex "Federation", Tower "West",<br> 45 floor, office 10, Moscow, Russian Federation, 123100</p>
-			<p class="copyright">© 2009-2022 METRIKA Advertising</p>
+			<p class="copyright">© METRIKA 2009-2022 </p>
 		</div>
 		<div class="developer">Made in Yury Smolianinov Studio</div>
 	</div>
