--- a/career.html
+++ b/career.html
@@ -134,7 +134,7 @@
 		<div class="address-text">
 			<p>office@media-metrica.ru</p>
 			<p>123100, Москва, Пресненская набережная, дом 12, ММДЦ «Москва Сити»,<br> башня «Федерация Запад», этаж 45, офис 10</p>
-			<p class="copyright">© 2009-2022 METRIKA Advertising</p>
+			<p class="copyright">© METRIKA 2009-2022 </p>
 		</div>
 		<div class="developer">Сделано в Студии Юрия Смольянинова</div>
 	</div>
