--- a/career.html
+++ b/career.html
@@ -84,21 +84,21 @@
 						<li>
 							<h4 class="marketing">КЛИЕНТСКИЙ ОТДЕЛ</h4>
 							<ul>
-								<li><a data-id="263140" href="/careers/?gh_jid=263140">Менеджер по продажам <i class="fa fa-angle-right" aria-hidden="true"></i></a></li>
+								<li><a data-id="263140" href="/careers/?gh_jid=263140">Account Manager <i class="fa fa-angle-right" aria-hidden="true"></i></a></li>
 							</ul>
 						</li>
 
 						<li>
 							<h4 class="project">ПРОЕКТНЫЙ ОТДЕЛ</h4>
 							<ul>
-								<li><a data-id="263131" href="/careers/?gh_jid=263131">Менеджер проектов <i class="fa fa-angle-right" aria-hidden="true"></i></a></li>
+								<li><a data-id="263131" href="/careers/?gh_jid=263131">Strategist <i class="fa fa-angle-right" aria-hidden="true"></i></a></li>
 							</ul>
 						</li>
 
 						<li>
 							<h4 class="strategy">ОТДЕЛ РАЗРАБОТКИ</h4>
 							<ul>
-								<li><a data-id="574614" href="/careers/?gh_jid=574614">Стратег <i class="fa fa-angle-right" aria-hidden="true"></i></a></li>
+								<li><a data-id="574614" href="/careers/?gh_jid=574614">Project Manager <i class="fa fa-angle-right" aria-hidden="true"></i></a></li>
 							</ul>
 						</li>
 
