--- a/career.html
+++ b/career.html
@@ -50,7 +50,7 @@
 				<div class="row">
 					<div id="main" class="mnu-line clearfix">
 						<div class="col-md-2">
-							<a href="index.html" class="logo">Metrica</a>
+							<a href="index.html" class="logo">Metrika</a>
 						</div>
 						<div class="col-md-6 col-md-offset-4">
 							<nav class="main-mnu inside">
@@ -89,16 +89,16 @@
 						</li>
 
 						<li>
-							<h4 class="project">ПРОЕКТНЫЙ ОТДЕЛ</h4>
+							<h4 class="project">ОТДЕЛ РАЗРАБОТКИ</h4>
 							<ul>
-								<li><a data-id="263131" href="/careers/?gh_jid=263131">Strategist <i class="fa fa-angle-right" aria-hidden="true"></i></a></li>
+								<li><a data-id="263131" href="/careers/?gh_jid=263131">Project Manager <i class="fa fa-angle-right" aria-hidden="true"></i></a></li>
 							</ul>
 						</li>
 
 						<li>
-							<h4 class="strategy">ОТДЕЛ РАЗРАБОТКИ</h4>
+							<h4 class="strategy">ПРОЕКТНЫЙ ОТДЕЛ</h4>
 							<ul>
-								<li><a data-id="574614" href="/careers/?gh_jid=574614">Project Manager <i class="fa fa-angle-right" aria-hidden="true"></i></a></li>
+								<li><a data-id="574614" href="/careers/?gh_jid=574614">Strategist <i class="fa fa-angle-right" aria-hidden="true"></i></a></li>
 							</ul>
 						</li>
 
@@ -108,7 +108,7 @@
 				<div class="col-md-12">
 									<h3>Работа у нас</h3>
 				<p class="find">Не нашли то, что искали?</p>
-				<p class="description">Мы всегда рады умным и талантливым людям. Даже если вы не нашли подходящую вакансию в списке, можете отправить нам свое резюме, и мы сообщим когда для вас появится работа.</p>
+				<p class="description">Мы всегда рады умным и талантливым людям.</href> Даже если вы не нашли подходящую вакансию в списке, можете отправить нам свое резюме, и мы сообщим когда для вас появится работа.</p>
 				<a href="#">Отправить резюме <i class="fa fa-angle-right" aria-hidden="true"></i></a>
 				</div>
 
