--- a/404.html
+++ b/404.html
@@ -50,7 +50,7 @@
 					<h2 id="code">4<span>0</span><span>4</span></h2>
 					<p id="error">Houston, we have a <span>problem...</span></p>
 
-					<a href="media-metrika.ru">Return to the base <img src="img/astronaut.svg" alt="return" width="40px" height="40px;"></a>
+					<a href="www.media-metrika.ru">Return to the base <img src="img/astronaut.svg" alt="return" width="40px" height="40px;"></a>
 				</div>
 
 			</div>
