--- a/index_english.html
+++ b/index_english.html
@@ -264,9 +264,9 @@ function initMap() {
 		<div class="address-text">
 			<p>office@media-metrika.ru</p>
 			<p>12 Presnenskaya Naberezhnaya, Moscow IBC, Office Complex "Federation", Tower "West",<br> 45 floor, office 10, Moscow, Russian Federation, 123100</p>
-			<p class="copyright">© METRIKA 2009-2022 </p>
+			<p class="copyright">© METRIKA 2009-2023 </p>
 		</div>
-		<div class="developer">Made in Yury Smolianinov Studio</div>
+		<div class="developer"> </div>
 	</div>
 
 
