--- a/career.html
+++ b/career.html
@@ -134,9 +134,9 @@
 		<div class="address-text">
 			<p>office@media-metrica.ru</p>
 			<p>123100, Москва, Пресненская набережная, дом 12, ММДЦ «Москва Сити»,<br> башня «Федерация Запад», этаж 45, офис 10</p>
-			<p class="copyright">© METRIKA 2009-2022 </p>
+			<p class="copyright">© METRIKA 2009-2023 </p>
 		</div>
-		<div class="developer">Сделано в Студии Юрия Смольянинова</div>
+		<div class="developer"> </div>
 	</div>
 </footer>
 
