--- a/index_english.html
+++ b/index_english.html
@@ -74,7 +74,7 @@
 										<a href="#brands" class="btn btn-circle page-scroll">
 											<img src="img/down-arrow.svg" alt="arrow">
 										</a>
-										<p class="intro-text">12+ years on the Russian market</p>
+										<p class="intro-text"> </p>
 									</div>
 								</div>
 							</div>
