--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>METRIKA Advertising</title>
+	<title>METRICA Advertising</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -48,7 +48,7 @@
 			<div class="row">
 				<div id="main" class="mnu-line clearfix">
 					<div class="col-md-2">
-						<a href="#" class="logo">Metrika</a>
+						<a href="#" class="logo">Metrica</a>
 					</div>
 					<div class="col-md-6 col-md-offset-4">
 						<nav class="main-mnu">
@@ -68,7 +68,7 @@
 							<div class="row">
 								<div class="col-md-12">
 									<div class="border">
-										<p>METRIKA Advertising Agency</p>
+										<p>METRICA Advertising Agency</p>
 									</div>
 									<div class="col-md-8 col-md-offset-2">
 										<a href="#brands" class="btn btn-circle page-scroll">
@@ -209,7 +209,7 @@
 		<div class="col-md-8 col-md-offset-2">
 			<div class="promo">
 				<p>Метрика – рекламное агентство, предоставляющее услуги в области медиапланирования и размещения рекламы.</p>
-				<p>С 2009 года Метрика работает с лидерами российского рынка, оказывая услуги широкому кругу клиентов из Москвы и регионов России, в том числе компаниям, специализирующимся в строительном, банковском, автомобильном, розничном и многих других секторах.</p>
+				<p>С 2009 года Метрика работает с лидерами российского рынка, оказывая услуги широкому кругу клиентов из Москвы и регионов России, в том числе компаниям, специализирующимся в строительном, медицинском, банковском, автомобильном и многих других секторах.</p>
 				<p>Метрика также сотрудничает с российскими государственными и коммерческими радиостанциями и телеканалами в различных регионах России, обеспечивая лучшие условия локального и мультилокального размещения рекламы.</p>
 			</div>
 		</div>
@@ -227,7 +227,7 @@
 
 		<div class="mail-text">
 			<p id="contacts" class="qe">Спросите, что вас интересует:</p>
-			<p>info@media-metrika.ru</p>
+			<p>info@media-metrica.ru</p>
 		</div>
 
 	</div>
@@ -261,9 +261,9 @@ function initMap() {
 <footer class="main-footer">
 	<div class="address">
 		<div class="address-text">
-			<p>office@media-metrika.ru</p>
+			<p>office@media-metrica.ru</p>
 			<p>123100, Москва, Пресненская набережная, дом 12, ММДЦ «Москва Сити»,<br> башня «Федерация Запад», этаж 45, офис 10</p>
-			<p class="copyright">© МЕТРИКА 2009-2023 </p>
+			<p class="copyright">© Media-Metrica 2009-2023 </p>
 		</div>
 		<div class="developer"> </div>
 	</div>
