--- a/index_english.html
+++ b/index_english.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>METRIKA Advertising</title>
+	<title>METRICA Advertising</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -48,7 +48,7 @@
 			<div class="row">
 				<div id="main" class="mnu-line clearfix">
 					<div class="col-md-2">
-						<a href="#" class="logo">Metrika</a>
+						<a href="#" class="logo">Metrica</a>
 					</div>
 					<div class="col-md-6 col-md-offset-4">
 						<nav class="main-mnu">
@@ -68,7 +68,7 @@
 							<div class="row">
 								<div class="col-md-12">
 									<div class="border">
-										<p>METRIKA Advertising Agency</p>
+										<p>METRICA Advertising Agency</p>
 									</div>
 									<div class="col-md-8 col-md-offset-2">
 										<a href="#brands" class="btn btn-circle page-scroll">
@@ -208,10 +208,10 @@
 		<div class="row">
 		<div class="col-md-8 col-md-offset-2">
 			<div class="promo">
-				<p>We are an agency with strong analytical skills and expertise in advertising.</p>
-				<p>Metrika has been working with leading organizations in Russia since 2009, serving a wide range of clients, from developers to banks and car dealers.</p>
-				<p>We are working closely with advertising platforms in Moscow and all regions of Russia, providing the best conditions for advertising.</p>
-				<p>We are in love with numbers and metrics, therefore all of our marketing projects are based  on data analysis.</p>
+				<p>We are an agency with strong analytical skills and expertise in marketing.</p>
+				<p>Metrica has been working with leading organizations in Russia since 2009, serving a wide range of clients, from developers to banks and car dealers.</p>
+				<p>We are working closely with media platforms in Moscow and all regions of Russia, providing the best conditions for advertising.</p>
+				<p>We are in love with numbers and metrics, therefore all of our projects are based on data analysis.</p>
 			</div>
 		</div>
 
@@ -228,7 +228,7 @@
 
 		<div class="mail-text">
 			<p id="contacts" class="qe">Feel free to email us to ask any questions:</p>
-			<p>info@media-metrika.ru</p>
+			<p>info@media-metrica.ru</p>
 		</div>
 
 	</div>
@@ -264,7 +264,7 @@ function initMap() {
 		<div class="address-text">
 			<p>office@media-metrika.ru</p>
 			<p>12 Presnenskaya Naberezhnaya, Moscow IBC, Office Complex "Federation", Tower "West",<br> 45 floor, office 10, Moscow, Russian Federation, 123100</p>
-			<p class="copyright">© METRIKA 2009-2023 </p>
+			<p class="copyright">© Media-Metrica 2009-2023 </p>
 		</div>
 		<div class="developer"> </div>
 	</div>
