--- a/career.html
+++ b/career.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>METRIKA Advertising</title>
+	<title>METRICA Advertising</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -50,7 +50,7 @@
 				<div class="row">
 					<div id="main" class="mnu-line clearfix">
 						<div class="col-md-2">
-							<a href="index.html" class="logo">Metrika</a>
+							<a href="index.html" class="logo">Metrica</a>
 						</div>
 						<div class="col-md-6 col-md-offset-4">
 							<nav class="main-mnu inside">
@@ -134,7 +134,7 @@
 		<div class="address-text">
 			<p>office@media-metrica.ru</p>
 			<p>123100, Москва, Пресненская набережная, дом 12, ММДЦ «Москва Сити»,<br> башня «Федерация Запад», этаж 45, офис 10</p>
-			<p class="copyright">© METRIKA 2009-2023 </p>
+			<p class="copyright">© Medea-Metrica 2009-2023 </p>
 		</div>
 		<div class="developer"> </div>
 	</div>
