--- a/career.html
+++ b/career.html
@@ -134,7 +134,7 @@
 		<div class="address-text">
 			<p>office@media-metrica.ru</p>
 			<p>123100, Москва, Пресненская набережная, дом 12, ММДЦ «Москва Сити»,<br> башня «Федерация Запад», этаж 45, офис 10</p>
-			<p class="copyright">© Medea-Metrica 2009-2023 </p>
+			<p class="copyright">© METRICA 2009-2023 </p>
 		</div>
 		<div class="developer"> </div>
 	</div>
