--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 </head>
 
 <body>
+	<!-- Yandex.Metrika counter --> <script type="text/javascript" > (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)}; m[i].l=1*new Date(); for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }} k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)}) (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym"); ym(94011725, "init", { clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true }); </script> <noscript><div><img src="https://mc.yandex.ru/watch/94011725" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
 	<header class="main-header">
 		<div class="container">
 			<div class="row">
@@ -263,7 +264,7 @@ function initMap() {
 		<div class="address-text">
 			<p>office@media-metrica.ru</p>
 			<p>123100, Москва, Пресненская набережная, дом 12, ММДЦ «Москва Сити»,<br> башня «Федерация Запад», этаж 45, офис 10</p>
-			<p class="copyright">© METRICA 2009-2023 </p>
+			<p class="copyright">© МЕТРИКА 2009-2023 </p>
 		</div>
 		<div class="developer"> </div>
 	</div>
