--- a/index.html
+++ b/index.html
@@ -230,6 +230,12 @@
 			<p id="contacts" class="qe">Спросите, что вас интересует:</p>
 			<p>info@media-metrica.ru</p>
 		</div>
+<div>
+  <a href="https://t.me/your_telegram_username">
+    <img src="telegram-logo.png" alt="Telegram Logo" width="50px">
+    Написать в Telegram
+  </a>
+</div>
 
 	</div>
 	</div>
