--- a/index.html
+++ b/index.html
@@ -230,10 +230,15 @@
 			<p id="contacts" class="qe">Спросите, что вас интересует:</p>
 			<p>info@media-metrica.ru</p>
 		</div>
-<div>
-  <a href="https://t.me/your_telegram_username">
-    <img src="telegram-logo.png" alt="Telegram Logo" width="50px">
-    Написать в Telegram
+<div class="social-links">
+  <a class="telegram" href="https://t.me/mediadevelopment" target="_blank" rel="noopener">
+    <i class="fab fa-telegram-plane"></i>
+    <span>Telegram</span>
+  </a>
+  
+  <a class="whatsapp" href="https://wa.me/79202382041" target="_blank" rel="noopener">
+    <i class="fab fa-whatsapp"></i>
+    <span>WhatsApp</span>
   </a>
 </div>
 
