--- a/career.html
+++ b/career.html
@@ -92,14 +92,14 @@
 						<li>
 							<h4 class="project">ОТДЕЛ РАЗРАБОТКИ</h4>
 							<ul>
-								<li><a data-id="263131" href="/careers/?gh_jid=263131">Project Manager <i class="fa fa-angle-right" aria-hidden="true"></i></a></li>
+								<li><a data-id="263131" href="/careers/?gh_jid=263131">Data Analyst <i class="fa fa-angle-right" aria-hidden="true"></i></a></li>
 							</ul>
 						</li>
 
 						<li>
 							<h4 class="strategy">ПРОЕКТНЫЙ ОТДЕЛ</h4>
 							<ul>
-								<li><a data-id="574614" href="/careers/?gh_jid=574614">Strategist <i class="fa fa-angle-right" aria-hidden="true"></i></a></li>
+								<li><a data-id="574614" href="/careers/?gh_jid=574614">Project Manager <i class="fa fa-angle-right" aria-hidden="true"></i></a></li>
 							</ul>
 						</li>
 
@@ -135,7 +135,7 @@
 		<div class="address-text">
 			<p>office@media-metrica.ru</p>
 			<p>123100, Москва, Пресненская набережная, дом 12, ММДЦ «Москва Сити»,<br> башня «Федерация Запад», этаж 45, офис 10</p>
-			<p class="copyright">© METRICA 2009-2023 </p>
+			<p class="copyright">© METRICA 2009-2024 </p>
 		</div>
 		<div class="developer"> </div>
 	</div>
